Add top part of webpage with all css involved. Formatting and colors too

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <title>Landing Page</title>
 <meta charset="utf-8">
-<link rel="stylesheets" href="style.css">
+<link rel="stylesheet" href="style.css">
 
 
 </head>
@@ -13,8 +13,10 @@
 <body>
 
 <div class="top">
+
+ <div class="tiptop">
     <div class="hlogo"> 
-        <h2> Header Logo</h2>
+        <h3> Header Logo</h2>
     </div>
     <div class="hlinks">
         <p class="hlink"> header link one</p>
@@ -26,10 +28,27 @@
 
 
 
+ </div>
+
+ <div class="topbot">
+
+  <div class="ttopbot">
+    <p class="awesome">This website is awesome</p>
+    <p class="smallawesome"> This website has some subtext that goes here under the main title. It's a smaller font and the color
+        is a lower contrast.</p>
+
+
+
+  </div>
+
+  <img class="gimg" src="imgs/pexels-luka-peric-16863602.jpg">
+
+
+ </div>
+ <button class="signup"> Sign up </button>
+
+
 </div>
-
-
-
 
 
 
