Add second part with all formatting and css

--- a/index.html
+++ b/index.html
@@ -51,6 +51,45 @@
 </div>
 
 
+<div class="secondpart">
+
+    <div class="headtwo">
+        <p class="theadtwo"> Some random information.</p>
+    </div>
+
+
+ <div class="boxes">
+    <div class="wholebox">
+     <div class="box"></div>
+     <p class="tbox"> this is some subtext uner an illustration or image</p>
+
+    </div>
+
+    <div class="wholebox">
+        <div class="box"></div>
+        <p class="tbox"> this is some subtext uner an illustration or image</p>
+   
+       </div>
+
+    <div class="wholebox">
+        <div class="box"></div>
+        <p class="tbox"> this is some subtext uner an illustration or image</p>
+   
+       </div>
+
+    <div class="wholebox">
+        <div class="box"></div>
+        <p class="tbox"> this is some subtext uner an illustration or image</p>
+   
+       </div>
+    
+
+ </div>
+
+
+</div>
+
+
 
 
 </body>
