--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
  <div class="boxes">
     <div class="wholebox">
      <div class="box"></div>
-     <p class="tbox"> this is some subtext uner an illustration or image</p>
+     <p class="tbox"> this is some subtext under an illustration or image</p>
 
     </div>
 
     <div class="wholebox">
         <div class="box"></div>
-        <p class="tbox"> this is some subtext uner an illustration or image</p>
+        <p class="tbox"> this is some subtext under an illustration or image</p>
    
        </div>
 
     <div class="wholebox">
         <div class="box"></div>
-        <p class="tbox"> this is some subtext uner an illustration or image</p>
+        <p class="tbox"> this is some subtext under an illustration or image</p>
    
        </div>
 
     <div class="wholebox">
         <div class="box"></div>
-        <p class="tbox"> this is some subtext uner an illustration or image</p>
+        <p class="tbox"> this is some subtext under an illustration or image</p>
    
        </div>
     
@@ -89,7 +89,20 @@
 
 </div>
 
+<div class="thirdlayer">
 
+ <p class="thirdt"> <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will
+    actually read it. Who knows? All I know is that it looks nice. </em>
+ </p>
+
+ <p class="thirdThor">-Thor, God of Thunder</p>
+
+
+
+
+
+
+</div>
 
 
 </body>
