Add fourth layer css and add finishing touches in both html and css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
 
+
+
+<div class="whole">
 <div class="top">
 
  <div class="tiptop">
@@ -108,12 +111,12 @@
 <div class="fourthlayer">
 
     <div class="fourthbluelayer">
-
+        <div class="fourtht">
         <p class="call"> Call to action! It's time!</p>
         <p class="callsmall">Sign up for our project by clicking that button right over there!</p>
-       
+        </div>
         <div class="fourthright">
-         <button class="signup">Sign up</button>
+         <button class="signup2">Sign up</button>
         </div>
 
 
@@ -130,7 +133,7 @@
 
 
 
-
+</div>
 </body>
 
 
