--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h3> Header Logo</h2>
     </div>
     <div class="hlinks">
-        <p class="hlink"> header link one</p>
+        <p class="hlink"> <a href="https://www.youtube.com/watch?v=EcjS7Cwn3GU&ab_channel=PGCFusion">You should go here... NOW</a></p>
         <p class="hlink"> header link two</p>
         <p class="hlink"> header link three</p>
 
